# ChangeLog for net-www/mplayerplug-in
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/ChangeLog,v 1.94 2007/07/04 21:20:31 armin76 Exp $

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> mplayerplug-in-3.21.ebuild,
  mplayerplug-in-3.31-r1.ebuild, mplayerplug-in-3.35.ebuild,
  mplayerplug-in-3.40-r1.ebuild:
  x86 stable and drop alpha/ia64 keyword

  02 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  mplayerplug-in-3.40-r1.ebuild:
  Stable on sparc

  27 Jun 2007; Raúl Porcel <armin76@gentoo.org> mplayerplug-in-3.35.ebuild:
  alpha stable wrt #150110

  26 Jun 2007; Joseph Jezak <josejx@gentoo.org>
  mplayerplug-in-3.40-r1.ebuild:
  Marked ppc stable and re-added seamonkey patch.

*mplayerplug-in-3.40-r1 (17 May 2007)

  17 May 2007; Joseph Jezak <josejx@gentoo.org> -mplayerplug-in-3.40.ebuild,
  +mplayerplug-in-3.40-r1.ebuild:
  Fix get_libdir typo.

  16 May 2007; Joseph Jezak <josejx@gentoo.org> mplayerplug-in-3.40.ebuild:
  Added epiphany support for bug #176613.

*mplayerplug-in-3.40 (16 May 2007)

  16 May 2007; Joseph Jezak <josejx@gentoo.org>
  +files/mplayerplug-in-3.40-cflags.patch,
  +files/mplayerplug-in-mplayer-bin.patch, +mplayerplug-in-3.40.ebuild:
  Added latest version.

  12 May 2007; Steve Dibb <beandog@gentoo.org> mplayerplug-in-3.35.ebuild:
  amd64 stable, bug 150110

  27 Mar 2007; Raúl Porcel <armin76@gentoo.org> mplayerplug-in-3.35.ebuild:
  ia64 stable wrt bug 150110

  19 Mar 2007; Joseph Jezak <josejx@gentoo.org>
  +files/mplayerplug-in-3.31-seamonkey.patch,
  +files/mplayerplug-in-3.35-seamonkey.patch, mplayerplug-in-3.31-r1.ebuild,
  mplayerplug-in-3.35.ebuild:
  Added patch for seamonkey (same as firefox patch), thanks to Dustin Surawicz
  in bug #171010 for the patch.

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> mplayerplug-in-3.35.ebuild:
  x86 stable

  27 Feb 2007; Joseph Jezak <josejx@gentoo.org>
  +files/mplayerplug-in-3.31-firefox.patch,