@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/mplayerplug-in-3.40-r1.ebuild,v 1.4 2007/07/04 21:20:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/mplayerplug-in-3.40-r1.ebuild,v 1.5 2007/07/22 07:42:29 dberkholz Exp $
 
 inherit eutils multilib
 
@@ -18,11 +18,8 @@ DEPEND="
 				www-client/seamonkey
 				www-client/epiphany
 		)
-		|| ( ( x11-libs/libXpm
-				x11-proto/xextproto
-			)
-			virtual/x11
-		)
+		x11-libs/libXpm
+		x11-proto/xextproto
 		gtk? (
 			>=x11-libs/gtk+-2.2.0
 			dev-libs/atk
