@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mplayerplug-in
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/ChangeLog,v 1.94 2007/07/04 21:20:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/ChangeLog,v 1.95 2007/07/22 07:42:29 dberkholz Exp $
+
+  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  mplayerplug-in-3.21.ebuild, mplayerplug-in-3.31-r1.ebuild,
+  mplayerplug-in-3.35.ebuild, mplayerplug-in-3.40-r1.ebuild:
+  Drop virtual/x11 references.
 
   04 Jul 2007; Raúl Porcel <armin76@gentoo.org> mplayerplug-in-3.21.ebuild,
   mplayerplug-in-3.31-r1.ebuild, mplayerplug-in-3.35.ebuild,
